<resources>
    <string name="app_name">ShoppyBuddy</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="start_shopping">Start shopping!</string>
    <string name="my_baskets">My baskets</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_cart_review">CartReviewActivity</string>
    <string name="retake_image_dialog_text">Well this is awkward \"0.0 We couldn\'t identify the price in the picture. Would you like to try again? If the issue recurs, try zooming in on the price and make sure it\'s in focus.</string>
    <string name="retake_image_dialog_retry_button_text">Try again!</string>
    <string name="retake_image_dialog_return_button_text">Back to cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_describe_dialog_text">Please enter a description for your item</string>
    <string name="cart_describe_dialog_text">Please enter a description for your cart</string>
    <string name="title_activity_cart_list">CartListActivity</string>
    <!-- these are the strings from the settings creation tutorial -->
    <!-- <string name="app_name">Preferences</string> commented by me-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
 
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
 
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_item_description">Item Description</string>
    <string name="title_cart_description">Cart Description</string>
    <string name="summary_request_item_description">Request a description for each new item</string>
    <string name="summary_auto_generate_item_description">Display default item descriptions</string>
    <string name="summary_request_cart_description">Request a description for each new cart</string>
    <string name="summary_auto_generate_cart_description">Display default cart descriptions</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_request_description_for_item">key_request_description_for_item</string>
    <string name="key_request_description_for_cart">key_request_description_for_cart</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="dialog_title_source_currency">Select the currency to convert from</string>
    <string name="dialog_title_target_currency">Select the currency to convert to</string>
    <string name="key_source_currency">key_source_currency</string>
    <string name="key_target_currency">key_target_currency</string>
    <string name="title_source_currency">Source Currency</string>
    <string name="title_target_currency">Target Currency</string>
    <string name="pref_title_currency_conversions">Currency Settings</string>
</resources>
