<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Preferences">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_request_description_for_item"
            android:summaryOff="@string/summary_request_item_description"
            android:summaryOn="@string/summary_request_item_description"
            android:title="@string/title_item_description" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_request_description_for_cart"
            android:summaryOff="@string/summary_request_cart_description"
            android:summaryOn="@string/summary_request_cart_description"
            android:title="@string/title_cart_description" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_currency_conversions">

        <ListPreference
            android:dialogTitle="@string/dialog_title_source_currency"
            android:entries="@array/pref_currency_entries"
            android:entryValues="@array/pref_currency_values"
            android:key="@string/key_source_currency"
            android:title="@string/title_source_currency" />

        <ListPreference
            android:dialogTitle="@string/dialog_title_target_currency"
            android:entries="@array/pref_currency_entries"
            android:entryValues="@array/pref_currency_values"
            android:key="@string/key_target_currency"
            android:title="@string/title_target_currency" />
    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/pref_title_notifications">-->
 <!---->
        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/notifications_new_message"-->
            <!--android:title="@string/title_new_notification_sound" />-->
 <!---->
        <!--<RingtonePreference-->
            <!--android:defaultValue="content://settings/system/notification_sound"-->
            <!--android:dependency="notifications_new_message"-->
            <!--android:key="@string/key_notifications_new_message_ringtone"-->
            <!--android:ringtoneType="notification"-->
            <!--android:summary="@string/summary_choose_ringtone"-->
            <!--android:title="@string/pref_title_ringtone" />-->
 <!---->
        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/key_vibrate"-->
            <!--android:summary="@string/summary_vibrate"-->
            <!--android:title="@string/title_vibrate" />-->
    <!--</PreferenceCategory>-->
 
    <!--<PreferenceCategory android:title="@string/pref_header_about">
 
        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />
 
        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />
 
        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />
 
        &lt;!&ndash; preference opens url in browser &ndash;&gt;
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>
 
        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>
 
        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>-->
</PreferenceScreen>